# rlx

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: ppo.yaml  ppo_gym.yaml  ppo_gymnasium_vision.yaml  ppo_mjx.yaml  ppo_playground.yaml  sac_playground.yaml
docs/: ppo_visual.md  visual_ppo_summary.md
examples/: README.md  foot_tricks.ipynb  head_tricks.ipynb  okapi.xml  penalties.ipynb  robot_tricks.ipynb
notebooks/: replay_checkpoint.py  replay_gymnasium.py  replay_gymnasium_vision.py
scripts/: gymnasium_ppo_train.py  gymnasium_ppo_vision_train.py  gymnasium_render.py  gymnasium_sac_train.py  gymnasium_vision_render.py  playground_ckpt_view.py  playground_ppo_train.py  playground_render.py  playground_sac_train.py
src/rlx/: ppo.py  ppo_gym.py  ppo_gymnasium.py  ppo_gymnasium_vision.py  ppo_mjx.py  ppo_playground.py  ppo_playground_mlp.py  running_statistics.py  varibad_gymnasium.py
src/rlx/envs/: __init__.py
src/rlx/envs/gymnasium/: antdir.py  cheetahdir.py
src/rlx/gymnasium/: ppo.py  sac.py
src/rlx/playground/: ppo.py  sac.py
tests/: __init__.py  test_gae.py
